--- a/parte_1/main.css
+++ b/parte_1/main.css
@@ -18,7 +18,7 @@ form button {
 
 header {
     padding: 18px 0;
-    background-color: rgba(250, 177, 228, 0.795);
+    background-color: rgba(38, 52, 208, 0.795);
     color: #fff;
 }
 
@@ -134,6 +134,7 @@ form button {
 }
 
 form textarea {
+    resize: none;
     height: 180px;
 }
 
